src/test/deca/syntax/valid/expr/test_expr_ineq_two_sig.deca
// Description:
//    tests de programme syntaxiquement incorrects : ineq avec << au lieu de <
//
// Resultats:
//    Ligne 13: no viable alternative at input '0'
//    
//
// Historique:
//    cree le 01/01/2024

{
    int a = 2;
    if(a <= 0){
        a = 4;
    }
}