src/test/deca/syntax/invalid/expr/test_expr_ineq.deca
// Description:
//    tests de programme syntaxiquement incorrects : ineq avec << au lieu de <
//
// Resultats:
// extraneous input '=' expecting {'false', 'new', 'null', 'readInt', 'readFloat', 'this', 'true', IDENT, '-', '(', '!', INT, FLOAT, STRING}//    
//    
//
// Historique:
//    cree le 01/01/2024

{
    int a = 2;
    if(a <== 0){
        a = 4;
    }
}